# dreich

./: .editorconfig  .gitignore  CMakeLists.txt  Wind.sln  conanfile.py  conanfile.txt  game.csproj  wind-csharp.sln  wind.csproj
.github/workflows/: dev.yml  feature.yml  prod.yml
.github/workflows/modules/engine/lint/: action.yml
.github/workflows/modules/engine/test/: action.yml
.github/workflows/modules/logger/install-dependencies/: action.yml
.github/workflows/modules/logger/lint/: action.yml
.github/workflows/modules/logger/test/: action.yml
.github/workflows/modules/math/lint/: action.yml
.github/workflows/modules/math/test/: action.yml
.github/workflows/modules/native/lint/: action.yml
.github/workflows/modules/renderer/install-dependencies/: action.yml
.github/workflows/modules/renderer/lint/: action.yml
.github/workflows/modules/renderer/test/: action.yml
.github/workflows/utils/setup-base-libs/: action.yml
.github/workflows/utils/setup-conan/: action.yml
.github/workflows/utils/setup-dotnet/: action.yml
Engine/: Init.cs  Loop.cs  Wind.Web.csproj  Wind.csproj  WindEngine.cs  wind.csproj  wind.web.csproj
Engine/InputSystem/: Context.cs  GroupedTriggers.cs  InputSystem.cs  Key.cs  KeycodeTriggers.cs  KeysAction.cs  Keyscode.cs  Mappers.cs  Trigger.cs
Engine/Logger/: LoggerManager.cs
Engine/Mathf/: Vector2.cs
Engine/ServiceLocator/: ServiceLocator.cs  WindServices.cs
Engine/Src/: WindEngine.cs
Engine/Src/InputSystem/: Context.cs  GroupedTriggers.cs  InputSystem.cs  Keyscode.cs  Mappers.cs  Trigger.cs
Engine/Src/Logger/: LoggerManager.cs
Engine/Src/Mathf/: Vector2.cs
Engine/Src/ServiceLocator/: ServiceLocator.cs  WindServices.cs
Engine/Src/Window/: Window.cs
Engine/Utils/: Utils.cs
Engine/Window/: Window.cs
Engine/wwwroot/: index.html  main.js
Engineq/Src/InputSystem/: Key.cs  KeysAction.cs
Game/: Game.cs  game.csproj
Game/Src/: Game.cs
Logger/Native/: CMakeLists.txt
Math/: CMakeLists.txt
Math/Native/: CMakeLists.txt
Math/Native/src/: math.cpp
Renderer/: .conanfile.py.kate-swp  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
Renderer/Native/: CMakeLists.txt
Renderer/Native/include/: renderer.hpp
Renderer/Native/src/: renderer.cpp
cmake/: CMakeUtils.cmake  dependencies.cmake  executable.cmake  library.cmake
cmake/unix/: CMakeLists.txt  compiler.cmake
cmake/wasm/: CMakeLists.txt  compiler.cmake
cmake/windows/: CMakeLists.txt  compiler.cmake
conan/profiles/windows/: default  wasm
cpack/: cpack.cmake
engine/: Wind.Web.csproj  Wind.csproj
engine/Properties/: launchSettings.json
engine/Src/: WindEngine.cs
engine/Src/InputSystem/: GroupedTriggers.cs  InputSystem.cs  KeycodeTriggers.cs  Keyscode.cs  Mappers.cs
engine/Src/Math/: Vector2.cs
engine/Src/Utils/: Utils.cs
engine/Src/Window/: Window.cs
game/: Game.csproj
game/Src/: Game.cs
lab/: mylib.cpp  mylib.wasm
lab/IL/: CmakeLists.txt  log.cpp  main.cpp
lab/IL/CSharpApp/: CSharpApp.csproj  Program.cs
lab/c/: Program.cs  c.csproj
lab/c/Properties/: launchSettings.json
lab/c/wwwroot/: index.html  main.js  mymath.wasm
logger/include/: logger.hpp
logger/src/: logger.cpp
math/: CMakeLists.txt
math/include/: math.hpp
native/include/: keycodes.hpp  math.hpp  window.hpp
native/include/native/: window.hpp
native/src/: main.cpp  window.cpp
renderer/include/: window.hpp
renderer/src/: renderer.cpp
tests/: CMakeLists.txt
tests/Engine/: ExampleTest.cs
tests/logger/: CMakeLists.txt  main.cpp
tests/math/: CMakeLists.txt  main.cpp
tests/renderer/: CMakeLists.txt  main.cpp
tools/: clear-ci-cache.sh  cmake-build.sh  cmake-configure.sh  conan-deploy.sh  conan-install.sh  cpack-build.sh  ctest.sh
wm/: config.sh
